--- a/index.html
+++ b/index.html
@@ -1,86 +1,47 @@
-@import url('https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/static/woff2/SUIT.css');
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <link href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/static/woff2/SUIT.css" rel="stylesheet">
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>가족모임 초대장</title>
 
-html, body {
-  height: 100%;
-  scroll-behavior: smooth;
-  font-family: 'SUIT', sans-serif;
-  background-color: #f5ede4;  /* ✅ 전체 배경색: 샌드 베이지 */
-  color: #3b3b3b;
-}
+  <!-- 카카오톡 미리보기용 메타태그 -->
+  <meta property="og:title" content="온가족이 함께 모여 사랑을 나누는 자리에 초대합니다 🎉" />
+  <meta property="og:image" content="https://dlwlgus2011.github.io/invitation/페이지1.jpg" />
+  <meta property="og:url" content="https://dlwlgus2011.github.io/invitation/" />
 
-.wrapper {
-  scroll-snap-type: y mandatory;
-  height: 100vh;
-  overflow-y: scroll;
-}
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
 
-.screen {
-  scroll-snap-align: start;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 40px 20px;
-}
+<div class="wrapper">
 
-/* 대표/설명 이미지 */
-.clean-img {
-  width: 100%;
-  max-width: 700px;
-  max-height: 90vh;
-  object-fit: contain;
-  border-radius: 10px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-  background-color: #fff;
-}
+  <!-- 섹션 1: 대표 이미지 -->
+  <section class="screen">
+    <img src="페이지1.jpg" alt="대표 이미지" class="clean-img" />
+  </section>
 
-/* 지도 섹션 */
-.map-section {
-  background-color: #f5ede4;  /* 동일한 샌드 베이지 */
-  text-align: center;
-}
+  <!-- 섹션 2: 설명 이미지 -->
+  <section class="screen">
+    <img src="페이지2.jpg" alt="설명 이미지" class="clean-img" />
+  </section>
 
-/* 지도 제목 */
-.map-section h2 {
-  font-size: 1.3rem;
-  margin-bottom: 24px;
-  color: #8b6f4e;           /* 포인트 컬러 */
-  text-align: center;
-  font-weight: 700;         /* ✅ bold 적용 */
-}
+  <!-- 섹션 3: 지도 -->
+  <section class="screen map-section">
+    <h2>오시는 길</h2>
+    <a href="https://map.kakao.com/?itemId=1867059407" target="_blank">
+      <img src="map_preview.jpg" alt="지도 미리보기" class="map-thumb" />
+    </a>
+    <p class="map-caption">(이미지를 누르면 카카오맵으로 이동합니다)</p>
+    <p class="map-address-text">
+      서초그랑자이아파트 104동 3203호<br>
+      (서울 서초구 효령로 391)
+    </p>
+  </section>
 
-/* 지도 이미지 썸네일 */
-.map-thumb {
-  width: 90%;
-  max-width: 600px;
-  border-radius: 12px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-  cursor: pointer;
-  margin: 24px 0;
-  object-fit: contain;
-  background-color: #fff;
-}
+</div>
 
-.map-caption {
-  font-size: 0.7rem;
-  color: #888;
-  margin-top: 4px;
-  text-align: center;
-  font-style: italic;
-}
-
-/* 주소 텍스트 */
-.map-address-text {
-  font-size: 0.9rem;
-  color: #3b3b3b;
-  text-align: center;
-  line-height: 1.5;
-  margin-bottom: 40px;
-}
+</body>
+</html>
