--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <link href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/static/woff2/SUIT.css" rel="stylesheet">
-
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>가족모임 초대장</title>
 
-  <!-- 카카오톡 미리보기용 메타태그 -->
-  <meta property="og:title" content="온가족이 함께 모여 사랑을 나누는 자리에 초대합니다 🎉" />
-  <meta property="og:image" content="https://dlwlgus2011.github.io/invitation/페이지1.jpg" />
-  <meta property="og:url" content="https://dlwlgus2011.github.io/invitation/" />
+  <!-- ✅ 카카오톡 미리보기용 메타태그 -->
+  <meta property="og:title" content="가족모임에 초대합니다 🎉" />
+  <meta property="og:description" content="가족이 함께 모여 사랑을 나누는 시간" />
+  <meta property="og:image" content="https://dlwlgus2011.github.io/1/페이지1.jpg" />
+  <meta property="og:url" content="https://dlwlgus2011.github.io/1/" />
 
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
 
 <div class="wrapper">
