--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- ✅ 카카오톡 미리보기용 메타태그 -->
   <meta property="og:title" content="가족모임에 초대합니다 🎉" />
   <meta property="og:description" content="가족이 함께 모여 사랑을 나누는 시간" />
-  <meta property="og:image" content="https://dlwlgus2011.github.io/1/페이지1.jpg" />
+  <meta property="og:image" content="https://dlwlgus2011.github.io/1/page1.jpg" />
   <meta property="og:url" content="https://dlwlgus2011.github.io/1/" />
 
   <link rel="stylesheet" href="style.css" />
@@ -20,12 +20,12 @@
 
   <!-- 섹션 1: 대표 이미지 -->
   <section class="screen">
-    <img src="페이지1.jpg" alt="대표 이미지" class="clean-img" />
+    <img src="page1.jpg" alt="대표 이미지" class="clean-img" />
   </section>
 
   <!-- 섹션 2: 설명 이미지 -->
   <section class="screen">
-    <img src="페이지2.jpg" alt="설명 이미지" class="clean-img" />
+    <img src="page2.jpg" alt="설명 이미지" class="clean-img" />
   </section>
 
   <!-- 섹션 3: 지도 -->
